// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a narrow container correctly 1`] = `
<div
  className="components-modal-Container-m__container-narrow components-modal-Container-m__container"
>
  <h1
    className="components-modal-Container-m__header"
  >
    The Title
  </h1>
  <IconButton
    aria-label="Close modal dialog"
    className="components-modal-Container-m__close"
    icon={[Function]}
    onClick={[Function]}
    type="inverse"
  />
  <div
    id="child"
  />
</div>
`;

exports[`should render a non-dismissable container correctly 1`] = `
<div
  className="components-modal-Container-m__container-narrow components-modal-Container-m__container"
>
  <h1
    className="components-modal-Container-m__header"
  >
    The Title
  </h1>
  <div
    id="child"
  />
</div>
`;

exports[`should render a wide container correctly 1`] = `
<div
  className="components-modal-Container-m__container-wide components-modal-Container-m__container"
>
  <h1
    className="components-modal-Container-m__header"
  >
    The Title
  </h1>
  <IconButton
    aria-label="Close modal dialog"
    className="components-modal-Container-m__close"
    icon={[Function]}
    onClick={[Function]}
    type="inverse"
  />
  <div
    id="child"
  />
</div>
`;
